Fixed a bug causing animations to jump on hover.

--- a/source/css/_modules/_social.scss
+++ b/source/css/_modules/_social.scss
@@ -46,9 +46,7 @@ ul.social{
       &:hover{
 
         span:before{
-
           color: rgba($white, 1);
-          line-height: 30px;
         }
       }
 
